--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 
+#To ignore builds of the game
+BoardgameBuilds/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 [Mm]emoryCaptures/
